[gd_scene load_steps=19 format=3 uid="uid://kvbtnju0cfm0"]

[ext_resource type="Script" path="res://enemy.gd" id="1_5vapo"]
[ext_resource type="Texture2D" uid="uid://5hl6oabrl7er" path="res://magpie.png" id="2_t0j7x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f6id4"]
atlas = ExtResource("2_t0j7x")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2efr4"]
atlas = ExtResource("2_t0j7x")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmhm3"]
atlas = ExtResource("2_t0j7x")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd2q1"]
atlas = ExtResource("2_t0j7x")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tegx"]
atlas = ExtResource("2_t0j7x")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w64lw"]
atlas = ExtResource("2_t0j7x")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw5br"]
atlas = ExtResource("2_t0j7x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7blcl"]
atlas = ExtResource("2_t0j7x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e75vu"]
atlas = ExtResource("2_t0j7x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r3x2"]
atlas = ExtResource("2_t0j7x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gmlv"]
atlas = ExtResource("2_t0j7x")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nskqt"]
atlas = ExtResource("2_t0j7x")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gst2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6id4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2efr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmhm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd2q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tegx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w64lw")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw5br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7blcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e75vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r3x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gmlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nskqt")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_liak2"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wwrj6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6dgot"]
radius = 49.0102

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_5vapo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gst2g")
animation = &"move_up"
autoplay = "move_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_liak2")

[node name="bat_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="bat_hitbox"]
shape = SubResource("CircleShape2D_wwrj6")

[node name="territory" type="Area2D" parent="."]
position = Vector2(-4, 2)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="territory"]
position = Vector2(4, -2)
shape = SubResource("CircleShape2D_6dgot")

[connection signal="body_entered" from="bat_hitbox" to="." method="_on_bat_hitbox_body_entered"]
[connection signal="body_exited" from="bat_hitbox" to="." method="_on_bat_hitbox_body_exited"]
[connection signal="body_entered" from="territory" to="." method="_on_territory_body_entered"]
[connection signal="body_exited" from="territory" to="." method="_on_territory_body_exited"]
